# blitz

./: .gitignore  CMakeLists.txt  README.md
config/: env.cfg
include/: calculate.hpp  packet.hpp  timer.hpp  websocket.hpp
src/: calculate.cpp  fees.cpp  impact.cpp  parser.cpp  readConfig.cpp  simulator.cpp  slippage.cpp  wss_client.cpp
